--- a/src/joesview/Views/_ViewImports.cshtml
+++ b/src/joesview/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using joesview
 @using joesview.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Westwind.AspNetCore.Markdown
