--- a/src/joesview/Views/Home/Index.cshtml
+++ b/src/joesview/Views/Home/Index.cshtml
@@ -12,11 +12,17 @@
 <style>
     .rounded-avatar {
         border-radius: 50%;
+        width: 25px;
+        height: 25px;
     }
 
     .pr-avatar {
-        border-radius: 50%;
+        border-radius: 15%;
         float : left;
+        margin-right: 10px;
+        margin-top: 5px;
+        width: 38px;
+        height: 38px;
     }
     
     .image-txt-container {
@@ -29,7 +35,7 @@
 @foreach (var pr in Model.PRs)
 {
     <div .image-txt-container>
-        <img width="50px" height="50px" src="@pr.User.AvatarUrl" alt="@pr.User.Login" title="@pr.User.Login" class="pr-avatar"/>
+        <img width="40px" height="40px" src="@pr.User.AvatarUrl" alt="@pr.User.Login" title="@pr.User.Login" class="pr-avatar"/>
         <p>
             <a href="@pr.RepoUrl">@pr.Repo</a> / <a href="@pr.Url">@pr.Title</a>
             <br>
@@ -38,7 +44,7 @@
                 <span>Approvals:</span>
                 @foreach (var review in pr.Reviews.Where(x => x.State == "APPROVED"))
                 {
-                    <span><img width="25px" src="@review.User.AvatarUrl" alt="@review.User.Login" title="@review.User.Login" class="rounded-avatar"/></span>
+                    <span><img src="@review.User.AvatarUrl" alt="@review.User.Login" title="@review.User.Login" class="rounded-avatar"/></span>
                 }
             }
             else
