--- a/src/joesview/Views/Shared/_Layout.cshtml
+++ b/src/joesview/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container-fluid">
-            &copy; 2019 - joesview - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - Jirhub
         </div>
     </footer>
 
